@@ -40,6 +40,17 @@
       in the EPG if you have many channels. The tags are also presented
       in a Media player.
 
+  <dt>DVR Pre-Start
+  <dd>Allows the user to specify an amout of extra time that should
+      be prepended to a recording scheduled on this channel.
+      In other words, if you type 5 here for a recording that is scheduled
+      for 20:00 will start to record at 19:55.
+
+  <dt>DVR Post-End
+  <dd>Similar to DVR Pre-Start this allows the user to add an extra
+      amount of time that should be appended to a recording.
+      In other words, if you type 5 here for a recording that is scheduled
+      to end 20:30 will stop to record at 20:35.
 
   </dl>
  </div>
