@@ -329,6 +329,12 @@ extjs_channels_update(htsmsg_t *in)
 
     if((s = htsmsg_get_str(c, "tags")) != NULL)
       channel_set_tags_from_list(ch, s);
+
+    if((s = htsmsg_get_str(c, "epg_pre_start")) != NULL)
+      channel_set_epg_postpre_time(ch, 1, atoi(s));
+
+    if((s = htsmsg_get_str(c, "epg_post_end")) != NULL)
+      channel_set_epg_postpre_time(ch, 0, atoi(s));
   }
 }
 
@@ -371,6 +377,9 @@ extjs_channels(http_connection_t *hc, const char *remain, void *opaque)
 		 ctm->ctm_tag->ct_identifier);
       }
       htsmsg_add_str(c, "tags", buf);
+
+      htsmsg_add_s32(c, "epg_pre_start", ch->ch_dvr_extra_time_pre);
+      htsmsg_add_s32(c, "epg_post_end",  ch->ch_dvr_extra_time_post);
 
       htsmsg_add_msg(array, NULL, c);
     }
